--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
   test:
     docker:
       - image: circleci/ruby:3.1.0
-      - image: circleci/ruby:5.7
+      - image: circleci/mysql:5.7
       enviroment:
         MYSQL_ROOT_PASSWORD: password
         MYSQL_DATABASE: db/test.sqlite3
