--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ orbs:
 jobs:
   build:
     docker:
-      - image: cimg/ruby:3.1.0
+      - image: circleci/ruby:3.1.0
     working_directory: ~/Gakusyu-kun/src
     executor: ruby/default
     steps:
