--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ orbs:
 jobs:
   build:
     docker:
-      - image: circleci/ruby:3.1.0
+      - image: cimg/ruby:3.1.0
     working_directory: ~/Gakusyu-kun/src
     steps:
       - checkout:
@@ -21,8 +21,8 @@ jobs:
   
   test:
     docker:
-      - image: circleci/ruby:3.1.0
-      - image: circleci/mysql:5.7
+      - image: cimg/ruby:3.1.0
+      - image: cimg/mysql:5.7
         environment:
           MYSQL_ROOT_PASSWORD: password
           MYSQL_DATABASE: db/test.sqlite3
