--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
   test:
     docker:
       - image: cimg/ruby:2.6.6
-      - image: cimg/sqlite3
+      - image: cimg/mysql:5.7
         environment:
           MYSQL_ROOT_PASSWORD: password
           MYSQL_DATABASE: db/test.sqlite3
