--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
         environment:
           MYSQL_ROOT_PASSWORD: password
           MYSQL_DATABASE: db/test.sqlite3
-          MYSQL_USER: root
+          MYSQL_USER: user
     environment:
       BUNDLE_JOBS: "3"
       BUNDLE_RETRY: "3"
@@ -43,6 +43,10 @@ jobs:
       - run:
           name: test
           command: bundle exec rake test
+
+      - restore_cache:
+              keys:
+                - v1-dependencies-{{ checksum "Gakusyu-kun/Gemfile.lock" }}
 
 
 
