--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ version: 2.1
 # Orbs are reusable packages of CircleCI configuration that you may share across projects, enabling you to create encapsulated, parameterized commands, jobs, and executors that can be used across multiple projects.
 # See: https://circleci.com/docs/2.0/orb-intro/
 orbs:
-  ruby: circleci/ruby@1.4.0
+  ruby: ruby@1.4.0
 
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
@@ -37,10 +37,6 @@ jobs:
       - checkout:
           path: ~/rails_docker
 
-      - restore_cache:
-              keys:
-                - v1-dependencies-{{ checksum "Gakusyu-kun/Gemfile.lock" }}
-                
       - ruby/install-deps
       - run:
           name: Database setup
