--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
     working_directory: ~/Gakusyu-kun
     steps:
       - checkout:
-          path: ~/rails_docker
+          path: ~/Gakusyu-kun
 
       - ruby/install-deps
       - run:
