--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,9 @@ jobs:
     steps:
       - checkout:
           path: ~/Gakusyu-kun
+      - run: brew upgrade sqlite3 
       - ruby/install-deps
+      
   
   test:
     docker:
