--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,61 +1,66 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-
-# Orbs are reusable packages of CircleCI configuration that you may share across projects, enabling you to create encapsulated, parameterized commands, jobs, and executors that can be used across multiple projects.
-# See: https://circleci.com/docs/2.0/orb-intro/
 orbs:
-  ruby: circleci/ruby@1.4.0
+  ruby: circleci/ruby@0.1.2
 
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
   build:
     docker:
-      - image: cimg/ruby:2.6.6
-    working_directory: ~/Gakusyu-kun
-    steps:
-      - checkout:
-          path: ~/Gakusyu-kun
-      - ruby/install-deps
-  
-  test:
-    docker:
-      - image: cimg/ruby:2.6.6
-      - image: cimg/mysql:5.7
+      - image: circleci/ruby:2.7.2-node-browsers-legacy #rubyのversionに合ったコンテナ
         environment:
-          MYSQL_ROOT_PASSWORD: password
-          MYSQL_DATABASE: db/test.sqlite3
-          MYSQL_USER: user
-    environment:
-      BUNDLE_JOBS: "3"
-      BUNDLE_RETRY: "3"
-      APP_DATABASE_HOST: "127.0.0.1"
-      RAILS_ENV: test
-    working_directory: ~/Gakusyu-kun
+          - BUNDLER_VERSION: 2.1.4 # これがないとbundle installできない
+          - RAILS_ENV: 'test'
+          - DB_HOST: 127.0.0.1
+      - image: circleci/mysql:5.7
+        environment:
+          - MYSQL_ALLOW_EMPTY_PASSWORD: 'true'
+          - MYSQL_USER: root
+          - MYSQL_DB: ci_test # testのDB名指定
+    working_directory: ~/repo
     steps:
-      - checkout:
-          path: ~/Gakusyu-kun
+      # CI環境上の working_directory の値の場所にGitリポジトリをコピーする。
+      - checkout
 
-      - ruby/install-deps
+      # dockerコンテナの立ち上げを待つ(これ不要かも…？？？）
       - run:
-          name: Database setup
-          command: bundle exec rails db:migrate
+          name: wait for database
+          command: dockerize -wait tcp://127.0.0.1:3306 -timeout 5m
+
+      # キャッシュがあれば、リストアする。テスト時間の短縮につながる。keysでリストアするキャッシュを複数指定
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "Gemfile.lock" }}
+            - v1-dependencies-
+
+      # Bundle install dependencies
       - run:
-          name: test
-          command: bundle exec rake test
+          name: Install dependencies
+          command: |
+            gem install bundler -v 2.1.4
+            bundle install --path=vendor/bundle --jobs 4 --retry 3
 
+      # キャッシュする
+      - save_cache:
+          key: v1-dependencies-{{ checksum "Gemfile.lock" }}
+          paths:
+            - vendor/bundle
 
+      # DBのセットアップ
+      - run:
+          name: Database Setup
+          command: |
+            bundle exec rake db:create
+            bundle exec rake db:schema:load
 
+      # RSpecを実行
+      - run:
+          name: Run rspec
+          command: |
+            bundle exec rspec --profile 10 \
+                              --format RspecJunitFormatter \ #gem 'rspec-junit-fomatter'が必要
+                              --out test_results/rspec.xml \
+                              --format progress \
+                              $(circleci tests glob "spec/**/*_spec.rb" | circleci tests split --split-by=timings)
 
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
-workflows:
-  version: 2
-  build_and_test:
-    jobs:
-      - build
-      - test:
-          requires:
-            - build
-
+      # Save artifacts
+      - store_test_results:
+          path: /tmp/test-results
