--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,7 @@ jobs:
           - MYSQL_ALLOW_EMPTY_PASSWORD: 'true'
           - MYSQL_USER: root
           - MYSQL_DB: ci_test # testのDB名指定
+          - MYSQL_ROOT_PASSWORD: rootpw
     working_directory: ~/repo
     steps:
       # CI環境上の working_directory の値の場所にGitリポジトリをコピーする。
