--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,28 +2,20 @@ version: '3'
 services:
   gakusyu-kun:
     build: .
-    container_name: gakusyu-kun
-    command: /bin/sh -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 5000 -b '0.0.0.0'"
+    command: bundle exec rails s -p 3000 -b '0.0.0.0'
     volumes:
-      - .:/gakusyu-kun
+      - .:/app
     ports:
-      - 3000:5000
+      - 3000:3000
     depends_on:
       - db
     tty: true
     stdin_open: true
-    environment:
-      - EDITOR=vim
-      
   db:
     image: mysql:5.7
-    container_name: gakusyu-kun_db
     volumes:
       - db-volume:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: password
-    ports:
-      - '4567:4567'
-
 volumes:
   db-volume:
