--- a/containers/nginx/nginx.conf
+++ b/containers/nginx/nginx.conf
@@ -1,6 +1,6 @@
 upstream docker_rails {
   # ソケット通信したいのでpuma.sockを指定
-  server unix:///docker_rails/tmp/sockets/puma.sock;
+  server unix:///gakusyu-kun/tmp/sockets/puma.sock;
 }
 
 server {
@@ -12,7 +12,7 @@ server {
   error_log  /var/log/nginx/error.log;
 
   # ドキュメントルートの指定
-  root /docker_rails/public;
+  root /gakusyu-kun/public;
 
   client_max_body_size 100m;
   error_page 404             /404.html;
@@ -25,16 +25,16 @@ server {
   }
 
   location / {
-    try_files $uri @docker_rails;
+    try_files $uri @gakusyu-kun;
   }
 
 
 
   # リバースプロキシ関連の設定
-  location @docker_rails {
+  location @gakusyu-kun {
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $http_host;
-    proxy_pass http://docker_rails;
+    proxy_pass http://gakusyu-kun;
   }
 }
