--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,16 @@ services:
     build: .
     command: bundle exec puma -C config/puma.rb
     volumes:
-      - .:/app
+      - .:/gakusyu-kun/
+      - public-data:/gakusyu-kun//public
+      - tmp-data:/gakusyu-kun//tmp/sockets
+      - log-data:/var/log/nginx # 変更
     ports:
       - 3000:3000
     depends_on:
       - db
-    tty: true
     stdin_open: true
+    tty: true
   db:
     image: mysql:5.7
     volumes:
@@ -31,5 +34,7 @@ services:
 volumes:
   public-data:
   tmp-data:
+    driver: local # 追加
   log-data:
+    driver: local # 追加
   db-data:
