--- a/containers/nginx/nginx.conf
+++ b/containers/nginx/nginx.conf
@@ -1,4 +1,4 @@
-upstream docker_rails {
+upstream gakusyu-kun {
   # ソケット通信したいのでpuma.sockを指定
   server unix:///gakusyu-kun/tmp/sockets/puma.sock;
 }
