Revert "ec2deploy"

--- a/containers/nginx/nginx.conf
+++ b/containers/nginx/nginx.conf
@@ -1,6 +1,6 @@
 upstream gakusyu-kun {
   # ソケット通信したいのでpuma.sockを指定
-  server unix:/tmp/sockets/puma.socket;
+  server unix:/tmp/puma.socket;
 }
 
 server {
